backgtound img added

--- a/daily_planner/pubspec.yaml
+++ b/daily_planner/pubspec.yaml
@@ -65,6 +65,8 @@ flutter:
   
    -  images\facebook_logo.png
    -  images\google_logo.png
+
+   -  images\background.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
